# typestack

./: LICENSE  README.md  dune-project  typestack.opam
src/: dune  exec.ml  exec.mli  io.ml  lexer.mll  main.ml  program.mly  t.ml  tokens.mly  typecheck.ml  typecheck.mli
test/: dune  test.ml  test.tsk
